[tool.poetry]
name = "EHR_NER"
version = "0.1.0"
description = "Environment of Electrical Health Records of Named Entity Recognition"
authors = ["Yu-Lun Chiang <chiangyulun0914@gmail.com>"]
license = "YL"

[tool.poetry.dependencies]
python = "^3.7.9"
pandas = "^1.1.0"
xlrd = "^1.2.0"
openpyxl = "^3.0.4"
torch = "^1.6.0"
transformers = "^3.3.0"
seqeval = "^0.0.19"
Flask = "^1.1.2"
gunicorn = "^20.0.4"
autopep8 = "^1.5.3"
pytest = "^5.3.2"
pytest-mock = "^3.0.0"
pytest-cov = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
